--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/video" }]
-}
+    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+  }
